feat: [CDS-2993]: k8s release history interface integration (#37776)
* [CDS-2993]: request handlers integrated with release history interface

* [CDS-2993]: some bugfixes and fixed unit tests

* [CDS-2993]: fixed some unit tests and bugs

* [CDS-2993]: k8s delete step integration, with unit test fixes and some bugfixes

* [CDS-2993]: unit test fixes

* [CDS-2993]: use legacy release history as fallback

* [CDS-2993]: some refactors and unit tests

* [CDS-2993]: add created legacy release to legacy release history and integration for k8s traffic split task

* [CDS-2993]: k8s rolling - use imperative release entry for pruning if declarative release history is empty

* [CDS-2993]: integration for CG k8s traffic split and some test fixes

* fix: [CDS-2993]: handle runtimeException thrown by Kubernetes Watch when steady state check is aborted

* fix: [CDS-2993]: K8s Rolling Rollback - FF based logic for getting pod list

* feat: [CDS-2993]: add color label to release secret in BG deployments

* feat: [CDS-2993]: add color label to release secret in BG deployments (CG)

* fix: [CDS-2993]: imperative release history: only add release to release history during rolling deploy if not in canary WF

* fix: [CDS-2993]: add default infradef namespace to list of namespaces and filter null values during pod fetch

* fix: [CDS-2993]: [CDS-47232]: graceful handling of aborted tasks, NPE fix and fix for k8s secret conflict

* Fix imports

* code format

* fix: [CDS-2993]: fix unit tests

* fix: [CDS-2993]: remove redundant release history status update call, remove redundant pruned resource recreation call and continue release numbers from old release history

* fix: [CDS-2993]: some refactors and fixes

* fix: [CDS-2993]: fix unit test

* fix: [CDS-2993]: fix checkstyle

* fix: [CDS-2993]: add missing change for CG

* fix: [CDS-2993]: fail and save current release even when all stages are skipped, modify harness release secret prefix 